--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ body,
   font-size: 1rem;
 }
 
+.helper {
+  height:100vh;
+  width:100vw;
+  background-color: yellow;
+}
+
 .h-iframe {
   height: calc(100vh - 224px);
 }
