--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,30 @@ max-height:100vh;
 
 }
 
+.loaderIfra {
+position:fixed;
+top:0;
+left:0;
+right:0;
+bottom:0;
+background-color:rgb(158, 43, 43);
+opacity:1;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 100%;
+width: 100%;
+/* max-height:100vh; */
+}
+
+.h-iframeLoad {
+  /* height: calc(100vh - 224px); */
+  background-color:rgb(158, 43, 43);
+  background-image: url(assets/loader_bg.jpg);
+  background-position: center; 
+  background-size: contain;
+}
+
 .h-iframe-mobile {
   height: calc(90vh);
 }
