--- a/src/App.css
+++ b/src/App.css
@@ -65,13 +65,18 @@ max-height:100vh;
 
 }
 
+.calendar {
+  width:556px;
+  height:295px;
+}
+
 .loaderIfra {
 position:fixed;
 top:0;
 left:0;
 right:0;
 bottom:0;
-background-color:rgb(158, 43, 43);
+/* background-color:rgb(158, 43, 43); */
 opacity:1;
 display: flex;
 align-items: center;
