--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body,
 }
 
 .email {
-  height:700px
+  height:auto;
 }
 
 .helper {
@@ -148,20 +148,63 @@ width: 100%;
   justify-content: center;
   min-height: 100vh;
 }
+
+/* Media player style overwrite start */
+
 .rhap_container {
   box-shadow: none !important;
   padding: 0px !important;
+  width:40px !important;
+  height:40px !important;
+  border-radius: 27px !important;
+  margin-top: 12px !important;
+  padding-left: -3px !important;
 }
+
+.rhap_controls-section {
+margin-top: -1px !important;
+}
+
 .rhap_time {
   font-size: 10px !important;
+  display: none !important;
 }
 .rhap_progress-indicator {
   width: 0px !important;
   height: 0px !important;
+  display: none !important;
 }
 .rhap_main-controls-button {
   color: black !important;
+  /* width:30px !important; */
+  border-radius: 50px !important;
+  border: 1px, solid, black !important;
 }
+
+.rhap_main-controls {
+  margin-left: -3px !important;
+}
+
 .rhap_progress-filled {
   background-color: #000000 !important;
+  display: none !important;
 }
+
+.rhap_progress-section {
+display: none !important;
+}
+
+.player, .player1 {
+  /* width: 300px; */
+  /* height:100px; */
+  background-position: center; 
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.player1 {
+  /* background-image: url(assets/QmPgdPxBpeMaWpUzjxxV4boeB9P4nC63zApn98TSn7MPoX.jpeg);*/
+  /* background-color:red;  */
+}
+
+/* Media player style overwrite end */
