--- a/src/App.css
+++ b/src/App.css
@@ -158,11 +158,11 @@ width: 100%;
   height:40px !important;
   border-radius: 27px !important;
   margin-top: 12px !important;
-  padding-left: -3px !important;
+  /* padding-left: -3px !important; */
 }
 
 .rhap_controls-section {
-margin-top: -1px !important;
+/* margin-top: -1px !important; */
 }
 
 .rhap_time {
@@ -182,7 +182,7 @@ margin-top: -1px !important;
 }
 
 .rhap_main-controls {
-  margin-left: -3px !important;
+  /* margin-left: -3px !important; */
 }
 
 .rhap_progress-filled {
