--- a/src/App.css
+++ b/src/App.css
@@ -274,9 +274,8 @@ display: none !important;
 }
 
 #collapsible-trigger-1667336467511{
+pointer-events: none;
 
-
-  color:red;
 }
 
 .Collapsible {
@@ -296,6 +295,11 @@ padding-left: 10px;
 padding-right: 10px;
 
 
+}
+
+.is-open{
+  
+  pointer-events:none;
 }
 
 .Collapsible__contentInner {
